# descent

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
data/fashion_mnist/: download.sh  md5sum.txt
docs/: fashion_mnist.gnuplot  image_fit.gnuplot
examples/: array.rs  image.rs  mnist.rs  test.rs
examples/array/: README.md  main.rs
examples/array_api/: README.md  main.rs
examples/fashion_mnist/: README.md  main.rs
examples/image_fit/: README.md  main.rs
examples/mnist/: README.md  main.rs
examples/sentiment/: main.rs
results/: mnist.gnuplot
src/: array.rs  builder.rs  context.rs  convolution_2d.glsl  device.rs  environment.rs  graph.rs  heap.rs  kernel.rs  kernel_common.glsl  kernel_matmul.glsl  layer.rs  lib.rs  loss.rs  main.rs  memory.rs  module.rs  op.rs  optimizer.rs  prelude.rs  schedule.rs  shape.rs  store.rs  variable.rs
src/device/: buffer_heap.rs  command_buffer.rs  context.rs  descriptor_pool.rs  fence.rs  heap.rs  staging.rs  timestamp.rs
