[package]
name = "descent"
version = "0.1.0"
authors = ["Simon Brown <si@sjbrown.co.uk>"]
edition = "2018"
publish = false

[dependencies]
arrayvec = "0.7"
rand = "0.8"
petgraph = "0.6"
#spark = { git = "https://github.com/sjb3d/spark/" }
spark = { path = "../spark/spark" }
shaderc = "0.7"
slotmap = "1.0"
trait-set = "0.2"
ordered-float = "2.7"
bytemuck = "1.7"
tinyvec = "1.3"

[dev-dependencies]
rand_chacha = "0.3"
flate2 = "1.0"
structopt = { version = "0.3", default-features = false }
strum = { version = "0.21", features = ["derive"] }
